Style the template.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
 body{
 	background-color: #000;
 }
+
+.main-title{
+	color: #fff;
+	text-align: center;
+}
+
+.input-container{
+	display: flex;
+	justify-content: center;
+	margin-top: 30px;
+}
